// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LockedBadge renders locked badge with default styles 1`] = `
<LockedBadge
  label="Default label"
  onClick={[MockFunction]}
/>
`;

exports[`LockedBadge renders locked badge with neutral styles 1`] = `
<LockedBadge
  label="Default label"
  onClick={[MockFunction]}
  variant="neutral"
/>
`;
